// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CdrSurface > applies background image properties via style attribute 1`] = `
<div
  class="cdr-surface"
  style="--cdr-surface-background-image: url(path/to/image.jpg); --cdr-surface-background-size: contain; --cdr-surface-background-position: top left;"
>
  
  
</div>
`;

exports[`CdrSurface > applies background image with default size and position 1`] = `
<div
  class="cdr-surface"
  style="--cdr-surface-background-image: url(path/to/another.png); --cdr-surface-background-size: cover; --cdr-surface-background-position: center;"
>
  
  
</div>
`;

exports[`CdrSurface > applies background property 1`] = `
<div
  class="cdr-surface"
  data-background="primary"
>
  
  
</div>
`;

exports[`CdrSurface > applies border color property 1`] = `
<div
  class="cdr-surface"
  data-border-color="primary"
>
  
  
</div>
`;

exports[`CdrSurface > applies border style property 1`] = `
<div
  class="cdr-surface"
  data-border-style="solid"
>
  
  
</div>
`;

exports[`CdrSurface > applies border width property 1`] = `
<div
  class="cdr-surface"
  data-border-width="one-x"
>
  
  
</div>
`;

exports[`CdrSurface > applies box shadow property 1`] = `
<div
  class="cdr-surface"
  data-box-shadow="raised"
>
  
  
</div>
`;

exports[`CdrSurface > applies loading state 1`] = `
<div
  class="cdr-surface"
  data-loading="true"
>
  
  
</div>
`;

exports[`CdrSurface > applies multiple properties 1`] = `
<div
  class="cdr-surface"
  data-background="secondary"
  data-border-color="primary"
  data-border-radius="soft"
  data-border-style="solid"
  data-border-width="one-x"
  data-box-shadow="raised"
>
  
  
</div>
`;

exports[`CdrSurface > applies palette property 1`] = `
<div
  class="cdr-surface"
  data-background="primary"
  data-palette="membership-subtle"
>
  
  
</div>
`;

exports[`CdrSurface > applies radius property 1`] = `
<div
  class="cdr-surface"
  data-border-radius="soft"
>
  
  
</div>
`;

exports[`CdrSurface > applies state-specific properties 1`] = `
<div
  class="cdr-surface"
  data-background="primary"
  data-background-hover="secondary"
>
  
  
</div>
`;

exports[`CdrSurface > base classes only 1`] = `
<span
  class="cdr-surface"
>
  
  
</span>
`;

exports[`CdrSurface > default snapshot 1`] = `
<div
  class="cdr-surface"
>
  
  
</div>
`;

exports[`CdrSurface > does not apply background image styles if prop is not provided 1`] = `
<div
  class="cdr-surface"
>
  
  
</div>
`;

exports[`CdrSurface > shows default slot 1`] = `
<div
  class="cdr-surface"
>
  
  Default slot
  
</div>
`;
